<resources>
    <string name="app_name">ECMO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forogot_password">Forogot Password?</string>
    <string name="not_a_member">Not a  Member?</string>
    <string name="register">Register</string>
    <string name="civilid">Civil ID</string>
    <string name="mobile">Mobile</string>
    <string name="hospital_name">Hospital</string>
    <string name="first_name">First Name</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="enter">Submit</string>
    <string name="fcm_sender_id">562387292074</string>
    <string name="_13kpa6_100mmhg"><![CDATA[<13kpa6(100mmHg)]]></string>
    <string name="_40kpa_300mhg"><![CDATA[\u226540kpa(300mHg) ]]></string>
    <string name="_15"><![CDATA[15\u2264]]></string>
    <string name="_5"><![CDATA[5\u2265]]></string>
    <string name="_19"><![CDATA[19\u2265]]></string>
    <string name="_80"><![CDATA[80\u2264 ]]></string>
    <string name="link_ecmo"> <a href="http://cesar.lshtm.ac.uk/murrayscorecalculator.htm">http://cesar.lshtm.ac.uk/murrayscorecalculator.htm</a></string>

    <string name="general_one">ELSO Guidelines General v1.4</string>
    <string name="general_two">Guidelines for ECMO Transport</string>
    <string name="general_three">Ultrasound Guidance for Extra-corporeal Membrane Oxygenation</string>
    <string name="guidelines_news_one">Joint Statement on Mechanical Circulatory Support in Children: A Consensus Review from the Pediatric Cardiac Intensive Care Society and Extracorporeal Life Support Organization</string>
    <string name="guidelines_news_two">Position Paper for the Organization of Extracorporeal Membrane Oxygenation Programs for Acute Respiratory Failure in Adult Patients. Published online, July 2014</string>
    <string name="link_guidl_one"> <a href="https://journals.lww.com/pccmjournal/toc/2013/06001">https://journals.lww.com/pccmjournal/toc/2013/06001</a></string>
    <string name="link_guidl_two" ><a href="http://www.atsjournals.org/doi/full/10.1164/rccm.201404-0630CP#.VAXoGaMzxH4">http://www.atsjournals.org/doi/full/10.1164/rccm.201404-0630CP#.VAXoGaMzxH4</a></string>

    <string-array name="hospital_arrays">
        <item>Select Hospital</item>
        <item>Hospital 1</item>
        <item>Hospital 2</item>
        <item>Hospital 3</item>
        <item>Hospital 4</item>
        <item>Hospital 5</item>
        <item>Hospital 6</item>

    </string-array>

    <string-array name="gus_E_arrays">
        <item>Select GCS E</item>
        <item>No response(no eye opening)</item>
        <item>Open to painful stimulus</item>
        <item>Open to speech</item>
        <item>Open spontaneously</item>
    </string-array>

    <string-array name="gus_V_arrays">
        <item>Select GCS V</item>
        <item>No response(silent)</item>
        <item>Incomprehenisble sounds</item>
        <item>Inappropriate words</item>
        <item>Confused</item>
        <item>Responds sensibly</item>
    </string-array>

    <string-array name="gus_M_arrays">
        <item>Select GCS M</item>
        <item>No response</item>
        <item>Straighteen limbs is response to pain(extension)</item>
        <item>Bends limbs in response to pain(flexion)</item>
        <item>Withdraws from pain</item>
        <item>Points (localises) to pain</item>
        <item>Obeys commands</item>
    </string-array>


    <string-array name="ratio">
        <item>Select PaO2/FiO2</item>
        <item>&gt;200</item>
        <item>100–200</item>
        <item>&lt;100</item>
    </string-array>

    <string-array name="pipvalue">
        <item>Select PEEP</item>
        <item>&lt;10</item>
        <item>10–15</item>
        <item>15–20</item>
        <item>&gt;20</item>
    </string-array>


    <string-array name="rr">
        <item>Select RR</item>
        <item>&lt;20</item>
        <item>20–40</item>
        <item>&gt;40</item>
    </string-array>


    <string-array name="LungCompliance">
        <item>Select Lung Compliance</item>
        <item>&gt;30</item>
        <item>30–20</item>
        <item>20–15</item>
        <item>15–10</item>
        <item>10–5</item>
        <item>&lt;5</item>
    </string-array>


    <string-array name="crx">
        <item>Select CXR quadrants</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string-array name="HR">
        <item>Select HR </item>
        <item>&lt;80</item>
        <item>80–120</item>
        <item>&gt;120</item>

    </string-array>


    <string-array name="BP">
        <item>Select BP </item>
        <item>&gt;150</item>
        <item>150–120</item>
        <item>120–100</item>
        <item>100–80</item>
        <item>&lt;80</item>
    </string-array>

    <string-array name="cvp">
        <item>Select cvp</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>


    <string-array name="temp">
        <item>Select Temp</item>
        <item>&lt;35</item>
        <item>35–37</item>
        <item>37–39</item>
        <item>39–41</item>
    </string-array>

    <string-array name="CardiacIndex">
        <item>Select Cardiac Index</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>

    </string-array>


    <string-array name="fio2">
        <item>Select Fio2</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1</item>

    </string-array>

    <string-array name="noofdaty">
        <item>Select Number of days </item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>&gt;7</item>

    </string-array>

    <string-array name="Leftventricularejectionfraction">
        <item>Select Left ventricular ejection fraction</item>
        <item>5</item>
        <item>15</item>
        <item>15–50</item>
        <item>&gt;50</item>

    </string-array>


</resources>
