<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor_bgnew"
    tools:context=".activity.RegisterActivity">


    <TextView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/margin15"
        android:padding="@dimen/margin5"
        android:text="@string/register"
        android:textColor="@color/yellow"
        android:textSize="@dimen/primaryText"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:layout_marginBottom="@dimen/margin60"
        android:elevation="2dp"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:textAllCaps="true"
            android:layout_height="@dimen/margin40"
            android:background="@drawable/form_cell_bg"
            android:cursorVisible="true"
            android:hint="@string/first_name"
            android:inputType="textCapCharacters"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/divider"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normalText" />

        <Spinner
            android:id="@+id/et_hospitalname"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            />

        <Spinner
            android:id="@+id/dr_speacility"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            />


        <EditText
            android:id="@+id/et_civilid"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            android:textAllCaps="true"
            android:inputType="number"
            android:hint="@string/civilid"
            android:cursorVisible="true"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/divider"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normalText" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            android:cursorVisible="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/divider"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normalText" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            android:cursorVisible="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/divider"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normalText" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            android:cursorVisible="true"
            android:hint="@string/mobile"
            android:inputType="phone"
            android:maxLength="9"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/divider"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normalText" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginTop="@dimen/margin15"
            android:background="@drawable/register_button"
            android:elevation="2dp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_marginBottom="@dimen/margin10"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/img_login_logo"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginStart="27dp"
        android:padding="@dimen/margin5"
        android:src="@drawable/ic_black"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="27dp" />

</RelativeLayout>
