<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/doctor_bgnew"
    tools:context="">


    <TextView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginTop="@dimen/margin15"
        android:padding="@dimen/margin5"
        android:text="@string/forgot_pwd"
        android:textColor="@color/yellow"
        android:textSize="@dimen/primaryText"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin20"
        android:layout_marginRight="@dimen/margin20"
        android:layout_marginTop="@dimen/margin20"
        android:elevation="2dp"
        android:orientation="vertical"
        tools:targetApi="lollipop">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginRight="@dimen/margin20"
            android:layout_marginTop="@dimen/margin5"
            android:background="@drawable/form_cell_bg"
            android:cursorVisible="true"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/divider"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/normalText" />


        <Button
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin40"
            android:layout_marginLeft="@dimen/margin20"
            android:layout_marginRight="@dimen/margin20"
            android:layout_marginTop="@dimen/margin15"
            android:background="@drawable/register_button"
            android:elevation="2dp"
            android:text="@string/enter"
            android:layout_marginBottom="@dimen/margin10"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            tools:targetApi="lollipop" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignStart="@+id/ll_login"
        android:layout_alignTop="@+id/img_login_logo"
        android:layout_gravity="center_vertical|center_horizontal"
        android:padding="@dimen/margin5"
        android:src="@drawable/ic_black"
        android:layout_alignLeft="@+id/ll_login" />

</RelativeLayout>
